wk_taa_taaqa/src/objects/Software_Training__c.object
<CustomObject>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Project__c</fullName>
        <label>Project/Product</label>
        <referenceTo>Software_Project__c</referenceTo>
        <relationshipLabel>Training and Consulting Sessions</relationshipLabel>
        <relationshipName>Software_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracker_Consultant_Name__c</fullName>
        <label>Consultant</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Software_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Session_Notes__c</fullName>
        <label>Training Session Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Software Training</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>